[workspace]
members = ["increment-test", "increment-0", "increment-1", "increment-2", "increment-3", "increment-4"]
resolver = "3"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
