[workspace]
members = ["increment-0", "increment-1", "increment-2", "increment-3", "increment-4", "increment-5", "increment-6"]
resolver = "3"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[workspace.dependencies]
# if you share a lot of dependencies amongst multiple workspace
# please do like that, There is two reasonning:
# 1: Sharing cache and metadata.
# 2: If you update, you update all as it could result in very insidious bugs
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
# needed to send fake input, to convert focus into pointer<over>.
bevy_render = "0.16.0" 
leafwing-input-manager = "0.17.0"

# Things you may want to add or check out.

# Dev Tools
# https://github.com/jakobhellermann/bevy-inspector-egui
